--- a/api/src/main/webapp/WEB-INF/web.xml
+++ b/api/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,7 @@
     
     <servlet>
 		<servlet-name>api</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<servlet-class>org.gitmining.api.controller.ApiServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
 			<param-value>classpath:api-servlet.xml</param-value>
@@ -33,4 +33,14 @@
 	<welcome-file-list>  
             <welcome-file>index.jsp</welcome-file>  
     </welcome-file-list>
+    
+    <error-page>
+		<error-code>404</error-code>
+		<location>/error.jsp</location>
+	</error-page>
+
+	<error-page>
+		<exception-type>java.lang.Exception</exception-type>
+		<location>/error.jsp</location>
+	</error-page>
 </web-app>
